Adding a page about authorship, noting manubot
This build is based on
https://github.com/yt-project/yt-3.0-paper/commit/7766bed1473e1a7ddf08d80fb3225e06e1d6035e.

This commit was created by the following Travis CI build and job:
https://travis-ci.org/yt-project/yt-3.0-paper/builds/342043834
https://travis-ci.org/yt-project/yt-3.0-paper/jobs/342043835

[ci skip]

The full commit message that triggered this build is copied below:

Fixing trailing bracket

--- a/manuscript.html
+++ b/manuscript.html
@@ -96,7 +96,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <header>
 <h1 class="title">Introducing yt 3.0: Analysis and Visualization of Volumetric Data</h1>
 </header>
-<p><small><em> This manuscript was automatically generated from <a href="https://github.com/yt-project/yt-3.0-paper/tree/88fad7e7ed86ed193005c9014ee0d7f36b30cb3b">yt-project/yt-3.0-paper@88fad7e</a> on February 16, 2018. </em></small></p>
+<p><small><em> This manuscript was automatically generated from <a href="https://github.com/yt-project/yt-3.0-paper/tree/7766bed1473e1a7ddf08d80fb3225e06e1d6035e">yt-project/yt-3.0-paper@7766bed</a> on February 16, 2018. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>The yt Project</strong><br> <img src="images/orcid.svg" alt="ORCID icon" width="13" height="13" /> <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a> · <img src="images/github.svg" alt="GitHub icon" width="13" height="13" /> <a href="https://github.com/yt-project">yt-project</a> · <img src="images/twitter.svg" alt="Twitter icon" width="13" height="13" /> <a href="https://twitter.com/yt_astro">yt_astro</a><br> <small> NumFOCUS · Funded by Grant XXXXXXXX </small></p></li>
@@ -295,7 +295,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>If we detect that we are loading a cosmological simulation performed in comoving coordinates, extra comoving units are added to the dataset’s unit registry. Comoving length unit symbols are still named following the pattern <code>&lt;length symbol&gt;cm</code>, i.e. <code>Mpccm</code>.</p>
 <p>The <span class="math inline">\(h\)</span> symbol is treated as a base unit, <code>h</code>, which defaults to unity. The <code>Dataset.set_units</code> updates the <code>h</code> symbol to the correct value when loading a cosmological simulation.</p>
 <h2 id="user-friendliness">User-Friendliness</h2>
-<h3 id="publication-ready-figures">Publication-Ready Figures}</h3>
+<h3 id="publication-ready-figures">Publication-Ready Figures</h3>
 <h3 id="ipython-integration-and-html-guis">IPython Integration and HTML GUIs</h3>
 <h2 id="halo-finding-and-catalogs">Halo-Finding and Catalogs</h2>
 <h2 id="scaling-and-parallelism">Scaling and Parallelism</h2>
