--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="The yt Project" />
   <meta name="author" content="Matthew Turk" />
+  <meta name="author" content="Nathan J Goldbaum" />
   <meta name="author" content="Add Yourself" />
-  <meta name="author" content="Jane Roe" />
   <meta name="dcterms.date" content="2018-02-16" />
   <meta name="keywords" content="markdown, publishing, manubot" />
   <title>Introducing yt 3.0: Analysis and Visualization of Volumetric Data</title>
@@ -96,13 +96,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <header>
 <h1 class="title">Introducing yt 3.0: Analysis and Visualization of Volumetric Data</h1>
 </header>
-<p><small><em> This manuscript was automatically generated from <a href="https://github.com/yt-project/yt-3.0-paper/tree/0ca82c7b2a12372b89f4324aaddfdd09dea96d13">yt-project/yt-3.0-paper@0ca82c7</a> on February 16, 2018. </em></small></p>
+<p><small><em> This manuscript was automatically generated from <a href="https://github.com/yt-project/yt-3.0-paper/tree/3b6020e22a41e9532b1bab0725886d2c6a3e1859">yt-project/yt-3.0-paper@3b6020e</a> on February 16, 2018. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>The yt Project</strong><br> <img src="images/orcid.svg" alt="ORCID icon" width="13" height="13" /> <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a> · <img src="images/github.svg" alt="GitHub icon" width="13" height="13" /> <a href="https://github.com/yt-project">yt-project</a> · <img src="images/twitter.svg" alt="Twitter icon" width="13" height="13" /> <a href="https://twitter.com/yt_astro">yt_astro</a><br> <small> NumFOCUS · Funded by Grant XXXXXXXX </small></p></li>
 <li><p><strong>Matthew Turk</strong><br> <img src="images/orcid.svg" alt="ORCID icon" width="13" height="13" /> <a href="https://orcid.org/0000-0002-5294-0198">0000-0002-5294-0198</a> · <img src="images/github.svg" alt="GitHub icon" width="13" height="13" /> <a href="https://github.com/MatthewTurk">MatthewTurk</a> · <img src="images/twitter.svg" alt="Twitter icon" width="13" height="13" /> <a href="https://twitter.com/powersoffour">powersoffour</a><br> <small> School of Information Sciences, University of Illinois at Urbana-Champaign; Department of Astronomy, University of Illinois at Urbana-Champaign · Funded by Grant XXXXXXXX </small></p></li>
+<li><p><strong>Nathan J Goldbaum</strong><br> <img src="images/orcid.svg" alt="ORCID icon" width="13" height="13" /> <a href="https://orcid.org/0000-0001-5557-267X">0000-0001-5557-267X</a> · <img src="images/github.svg" alt="GitHub icon" width="13" height="13" /> <a href="https://github.com/ngoldbaum">ngoldbaum</a> · <img src="images/twitter.svg" alt="Twitter icon" width="13" height="13" /> <a href="https://twitter.com/njgoldbaum">njgoldbaum</a><br> <small> National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign · Funded by Grant XXXXXXX </small></p></li>
 <li><p><strong>Add Yourself</strong><br> <img src="images/orcid.svg" alt="ORCID icon" width="13" height="13" /> <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a> · <img src="images/github.svg" alt="GitHub icon" width="13" height="13" /> <a href="https://github.com/yournamehere">yournamehere</a><br> <small> Department of Something, University of Whatever; Department of Whatever, University of Something </small></p></li>
-<li><p><strong>Jane Roe</strong><br> <img src="images/orcid.svg" alt="ORCID icon" width="13" height="13" /> <a href="https://orcid.org/XXXX-XXXX-XXXX-XXXX">XXXX-XXXX-XXXX-XXXX</a> · <img src="images/github.svg" alt="GitHub icon" width="13" height="13" /> <a href="https://github.com/janeroe">janeroe</a><br> <small> Department of Something, University of Whatever; Department of Whatever, University of Something </small></p></li>
 </ul>
 <h2 id="abstract" class="page_break_before">Abstract</h2>
 <p>Abstract here!</p>
